kube/ticket-service-db/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service-db
spec:
  selector:
    matchLabels:
      app: ticket-service-db
  template:
    metadata:
      labels:
        app: ticket-service-db
    spec:
      containers:
      - name: ticket-service-db
        image: mysql:8
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
          requests:
            memory: "2Gi"
            cpu: "250m"
        volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
        ports:
        - containerPort: 3306
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: ticket-mysql
