kube/ticket-service-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service-db
spec:
  type: ClusterIP
  selector:
    app: ticketforge
  ports:
  - port: 3307
    targetPort: 3306
